Jenkins/master/jenkins-master-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  labels:
    app: "jenkins-master"
  namespace: "common-system"
  name: "jenkins-master-service"
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
  - name: "jnlp"
    port: 50000
    targetPort: 50000
  selector:
    app: "jenkins-master"
  type: "ClusterIP"
